Background issue on Android Chrome
Image not showing full height in portait mode, despite showing correctly in devtools on desktop Chrome :stuck_out_tongue_closed_eyes: Hopefullly min-height will fix it.

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,10 @@
 html {
 	background: url("images/drummer-bg.jpg") no-repeat fixed center;
 	background-size: cover;
-	font-family: 'Raleway', monospace;
+	font-family: 'Raleway', sans-serif;
 	font-size: .8vw;
+	min-height: 100vh;
+	width: 100%;
 }
 
 body {
